--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- 
+  엘리스 이력서
+ -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,8 +11,9 @@
   </head>
 
   <body>
+    <!-- 상단 메뉴 -->
     <header style="background-color: red">
-      <nav>
+    <nav>
         <ul>
           <li><a href="#">홈</a></li>
           <li><a href="#cv">이력서</a></li>
@@ -18,6 +22,7 @@
       </nav>
     </header>
 
+    <!-- 내용 -->
     <main>
       <h1 id="cv">이력서</h1>
       <section>
@@ -71,7 +76,8 @@
       </section>
     </main>
   </body>
-
+  
+  <!-- 하단 내용 -->
   <footer>
     <p>
       Author by: 엘리스 토끼<br />
