--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <head>
     <meta charset="UTF-8" />
     <title>Resume</title>
-    <link href="//font.elice.io/EliceDigitalBaeum.css" rel="stylesheet">
-    <link rel="stylesheet" href="resume.css">
+    <link href="//font.elice.io/EliceDigitalBaeum.css" rel="stylesheet" />
+    <link rel="stylesheet" href="resume.css" />
   </head>
 
   <body>
     <!-- 상단 메뉴 -->
-    <header style="background-color: red">
-    <nav>
+    <header>
+      <nav>
         <ul>
-          <li><a href="#">홈</a></li>
-          <li><a href="#cv">이력서</a></li>
-          <li><a href="#cd">학력사항</a></li>
+          <li><a href="#" id="nav1">홈</a></li>
+          <li><a href="#cv" id="nav2">이력서</a></li>
+          <li><a href="#cd" id="nav3">학력사항</a></li>
         </ul>
       </nav>
     </header>
@@ -33,50 +33,51 @@
           height="300"
         />
       </section>
+      <div class="container">
+        <section>
+          <h3>인적사항</h3>
+          <strong>생년월일:</strong> 1990. 03.26 | O형<br />
+          <strong>주소:</strong> 대전광역시 유성구 문지로 193<br />
+          <strong>연락처:</strong> contact@alice.io | 070.4633.2017<br />
+        </section>
 
-      <section>
-        <h3>인적사항</h3>
-        <strong>생년월일:</strong> 1990. 03.26 | O형<br />
-        <strong>주소:</strong> 대전광역시 유성구 문지로 193<br />
-        <strong>연락처:</strong> contact@alice.io | 070.4633.2017<br />
-      </section>
+        <section id="cd">
+          <h3>학력사항</h3>
+          <ul>
+            <li>2010.03 ~ 2013.02: 엘리스중학교 | 경기</li>
+            <li>2013.03 ~ 2016.02: 엘리스고등학교 | 경기 | 자연계</li>
+            <li>2016.03 ~ 2022.02: 엘리스대학교 | 서울 | 컴퓨터공학과</li>
+          </ul>
+        </section>
 
-      <section id="cd">
-        <h3>학력사항</h3>
-        <ul>
-          <li>2010.03 ~ 2013.02: 엘리스중학교 | 경기</li>
-          <li>2013.03 ~ 2016.02: 엘리스고등학교 | 경기 | 자연계</li>
-          <li>2016.03 ~ 2022.02: 엘리스대학교 | 서울 | 컴퓨터공학과</li>
-        </ul>
-      </section>
+        <section>
+          <h3>경력사항</h3>
+          <ol>
+            <li>한국 정보 올림피아드 대상</li>
+            <li>대학생 봉사 동아리 회장</li>
+            <li>엘리스 AI 트랙 수료</li>
+            <li>ai 프로젝트 대상</li>
+          </ol>
+        </section>
 
-      <section>
-        <h3>경력사항</h3>
-        <ol>
-          <li>한국 정보 올림피아드 대상</li>
-          <li>대학생 봉사 동아리 회장</li>
-          <li>엘리스 AI 트랙 수료</li>
-          <li>ai 프로젝트 대상</li>
-        </ol>
-      </section>
-
-      <section>
-        <h3>보유스킬</h3>
-        <ul>
-          <li><a href="https://ko.wikipedia.org/wiki/HTML">HTML</a></li>
-          <li>
-            <a href="http://www.tcpschool.com/css/css_intro_basic">CSS</a>
-          </li>
-          <li>
-            <a href="https://developer.mozilla.org/ko/docs/Web/JavaScript"
-              >JavaScript</a
-            >
-          </li>
-        </ul>
-      </section>
+        <section>
+          <h3>보유스킬</h3>
+          <ul>
+            <li><a href="https://ko.wikipedia.org/wiki/HTML">HTML</a></li>
+            <li>
+              <a href="http://www.tcpschool.com/css/css_intro_basic">CSS</a>
+            </li>
+            <li>
+              <a href="https://developer.mozilla.org/ko/docs/Web/JavaScript"
+                >JavaScript</a
+              >
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
   </body>
-  
+
   <!-- 하단 내용 -->
   <footer>
     <p>
