Add hover reaction

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           src="https://d2v80xjmx68n4w.cloudfront.net/gigs/rate/SEwc11582696537.png"
           width="300"
           height="300"
+          id="profile"
         />
       </section>
       <div class="container">
