edit smooth hover

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <h1 id="cv">이력서</h1>
       <section>
         <h2>엘리스 토끼</h2>
-        <img
-          src="https://d2v80xjmx68n4w.cloudfront.net/gigs/rate/SEwc11582696537.png"
-          width="300"
-          height="300"
-          id="profile"
-        />
+        <div class="image">
+          <img
+            src="https://d2v80xjmx68n4w.cloudfront.net/gigs/rate/SEwc11582696537.png"
+            id="profile"
+          />
+        </div>
       </section>
       <div class="container">
         <section>
