Add Responsive web

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume</title>
     <link href="//font.elice.io/EliceDigitalBaeum.css" rel="stylesheet" />
     <link rel="stylesheet" href="resume.css" />
@@ -37,9 +38,11 @@
       <div class="container">
         <section>
           <h3>인적사항</h3>
-          <strong>생년월일:</strong> 1990. 03.26 | O형<br />
-          <strong>주소:</strong> 대전광역시 유성구 문지로 193<br />
-          <strong>연락처:</strong> contact@alice.io | 070.4633.2017<br />
+          <div class="first">
+            <strong>생년월일:</strong> 1990. 03.26 | O형<br />
+            <strong>주소:</strong> 대전광역시 유성구 문지로 193<br />
+            <strong>연락처:</strong> contact@alice.io | 070.4633.2017<br />
+          </div>
         </section>
 
         <section id="cd">
